--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -3,6 +3,7 @@ name: Run Python script every day at 00:00
 on:
   schedule:
     - cron: '0 0 * * *'  # Voer elke dag om 00:00 uur uit
+  workflow_dispatch:
 
 jobs:
   run-script:
