--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -3,6 +3,7 @@ name: Run Python script daily
 on:
   schedule:
     - cron: '0 0 * * *' # Elke dag om 00:00 uur
+    workflow_dispatch:
 
 jobs:
   run_script:
