--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.12'
+        python-version: '3.12.2'
         
     - name: Run Python script
-      run: python C:\Users\Trainee\Documents\Python_projects\Pipedrive - Notion\TEST.py
+      run: python C:/Users/Trainee/Documents/Python_projects/Pipedrive - Notion/TEST.py
