--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -20,5 +20,4 @@ jobs:
         
     - name: Run Python script from GitHub
       run: |
-        wget -O script.py https://raw.githubusercontent.com/Hakimelmar/Pipedrive_Notion/main/TEST
-        python script.py
+        wget -O script.py https://raw.githubusercontent.com/Hakimelmar/Pipedrive_Notion/main/TEST.py
