--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -29,10 +29,10 @@ jobs:
       if: ${{ failure() }} # Deze stap wordt alleen uitgevoerd als de vorige stappen zijn mislukt
       uses: dawidd6/action-send-mail@v3
       with:
-        server_address: smtp.example.com
+        server_address: smtp.gmail.com
         server_port: 587
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
         subject: 'Automatiseringsstatus'
         body: 'De automatisering is niet succesvol voltooid.'
-        to: 'ontvanger@example.com'
+        to: 'hakimelmaruani@newmonday.nl'
