--- a/.github/workflows/automate.yml
+++ b/.github/workflows/automate.yml
@@ -35,7 +35,7 @@ jobs:
         NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
 
     - name: Email notification
-      if: ${{ success() }} # Deze stap wordt alleen uitgevoerd als de vorige stappen zijn gelukt
+      if: ${{ failure() }} # Deze stap wordt alleen uitgevoerd als de vorige stappen zijn gelukt
       uses: dawidd6/action-send-mail@v3
       with:
         server_address: smtp.gmail.com
@@ -43,6 +43,6 @@ jobs:
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
         subject: 'Automatiseringsstatus'
-        body: 'De automatisering is succesvol voltooid.'
+        body: 'Er is een fout opgetreden tijdens het uitvoeren van de automatisering.'
         from: 'hakimelmaruani@newmonday.nl'
         to: 'hakimelmaruani@newmonday.nl'
